feat: add public filing footer settings
